k8s/templates/project-scaffold-sample-app/namespace.yaml
# last_verified: 2026-08-19 · Kubernetes n/a
apiVersion: v1
kind: Namespace
metadata:
  name: sample-app
