k8s/templates/project-scaffold-sample-app/service.yaml
# last_verified: 2026-08-19 · Kubernetes n/a
apiVersion: v1
kind: Service
metadata:
  name: sample-app
  namespace: sample-app
spec:
  selector:
    app: sample-app
  ports:
  - port: 80
    targetPort: 80
    protocol: TCP
  type: ClusterIP
